# msys2-web

./: .appveyor.yml  .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  LICENSE  README.rst  REUSE.toml  appveyor.sh  arch-mapping.json  docker-compose.yml  index.js  justfile  main.py  package-lock.json  package.json  pyproject.toml  rollup.config.js  run.py  setup.cfg  style.css  style.scss  test_main.py  update-srcinfo.py
.github/workflows/: main.yml
.reuse/: dep5
app/: __init__.py  api.py  appconfig.py  appstate.py  exttarfile.py  fetch.py  gentoo.py  mcp.py  pgp.py  pkgextra.py  pkgmeta.py  utils.py  web.py
app/fetch/: arch.py  buildstatus.py  cdx.py  cygwin.py  gentoo.py  pypi.py  source.py  sourceinfos.py  update.py  utils.py
app/static/: index.css  index.js  theme.js
app/static/fonts/: README.md
app/templates/: base.html  basegroup.html  basegroups.html  baseindex.html  group.html  groups.html  layout.html  macros.html  mirrors.html  navbar.html  new.html  outofdate.html  package.html  packages.html  packagevirtual.html  python2.html  queue.html  repos.html  search.html  security.html  stats.html  updates.html
ci/: appveyor.sh  update-srcinfo.py
frontend/: index.js  package-lock.json  package.json  rollup.config.js  style.scss
static/: index.js
static/css/: index.css
static/images/: Makefile
static/js/: index.js
templates/: base.html  baseindex.html  group.html  groups.html  index.html  irc.html  layout.html  navbar.html  new.html  outofdate.html  package.html  packages.html  python2.html  queue.html  removals.html  repos.html  search.html  updates.html
tests/: conftest.py  test_api.py  test_exttarfile.py  test_main.py  test_mcp.py  test_web.py
