[project]
name = "msys2-web"
version = "0.1.0"
description = ""
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
requires-python = ">=3.11.0,<4.0"
license = "MIT"
dependencies = [
    "aiohttp>=3.9,<4",
    "fastapi>=0.135.0,<0.136",
    "uvicorn>=0.42.0,<0.43",
    "jinja2>=3.1.2,<4",
    "fastapi-etag>=0.4.0,<0.5",
    "gunicorn>=25.0.0,<26",
    "aiolimiter>=1.0.0,<2",
    "pydantic>=2.0.3,<3",
    "MarkupSafe>=3.0.2,<4",
    "uvicorn-worker>=0.4.0,<0.5",
    "packageurl-python>=0.17.0,<0.18",
    "backports-zstd>=1.2.0,<2.0.0; python_version < '3.14'",
    "mcp>=1.10.1,<2",
]

[dependency-groups]
dev = [
    "reuse>=6.0.0,<7",
    "ty>=0.0.27",
    "pytest>=8.0.0,<10",
    "ruff>=0.15.0,<0.16.0",
]

[tool.poetry]
package-mode = false

[tool.uv]
package = false
exclude-newer = "3 days"

[build-system]
requires = ["uv_build>=0.9.3,<0.12.0"]
build-backend = "uv_build"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
norecursedirs = ["frontend"]

[tool.ruff]
line-length = 100
exclude = ["frontend", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E741"]
